darle estructura de paquete de python, usando setuptools. Hacer que ande el visualizador de glfw

--- a/imgui.ini
+++ b/imgui.ini
@@ -13,3 +13,23 @@ Pos=81,52
 Size=400,300
 Collapsed=0
 
+[Window][Video window cami.mp4]
+Pos=67,83
+Size=400,300
+Collapsed=0
+
+[Window][Video window rob.mp4]
+Pos=522,96
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./videos/cami.mp4]
+Pos=60,60
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./videos/rob.mp4]
+Pos=513,64
+Size=400,300
+Collapsed=0
+
