dejarlo en un estado en donde anda todo el pipeline, pero por ahora la generacion de videos solo funciona cuando hay un solo video en la carpeta bucle/videos. hay que repensar como ir almacenando esta info para que la generacion de videos no dependa de la cant de videos que tiene que procesar. contar la cantidad de imagenes del directorio en vez de ir pasando la cantidad de frames, por ejemplo

--- a/imgui.ini
+++ b/imgui.ini
@@ -33,3 +33,53 @@ Pos=513,64
 Size=400,300
 Collapsed=0
 
+[Window][Video window ./videos/current_outputs]
+Pos=60,60
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./videos/output_rob_face_.mp4]
+Pos=99,27
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./videos/output_rob_hand_.mp4]
+Pos=-1,317
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./videos/output_rob_mesh_.mp4]
+Pos=622,117
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_rob_face_.mp4]
+Pos=60,60
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_rob_mesh_.mp4]
+Pos=652,166
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_rob_hand_.mp4]
+Pos=145,373
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_hand_rob_.mp4]
+Pos=60,60
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_face_rob.mp4]
+Pos=60,60
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_hand_rob.mp4]
+Pos=588,113
+Size=400,300
+Collapsed=0
+
