pffffffff lo habia implementado sin querer- Anda bien para muchos videos tambien. ya corre todo el pipeline de forma automatizada 100%

--- a/imgui.ini
+++ b/imgui.ini
@@ -74,12 +74,22 @@ Size=400,300
 Collapsed=0
 
 [Window][Video window ./output_face_rob.mp4]
-Pos=60,60
+Pos=567,429
 Size=400,300
 Collapsed=0
 
 [Window][Video window ./output_hand_rob.mp4]
 Pos=588,113
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_hand_rob2.mp4]
+Pos=60,60
+Size=400,300
+Collapsed=0
+
+[Window][Video window ./output_face_rob2.mp4]
+Pos=77,397
 Size=400,300
 Collapsed=0
 
