--- a/video-stream/package.json
+++ b/video-stream/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "webrtc-test",
+  "name": "video-stream",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "socket.io": "^4.4.0",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15",
-    "peer": "^0.6.1"
+    "express": "^4.17.2",
+    "socket.io": "^4.4.0"
   }
 }
